# pi-py

./: PLAN.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: agent_e2e.py  openai_streaming.py
src/pi_py/pi_ai/: __init__.py  registry.py
src/pi_py/pi_ai/providers/: __init__.py  mock.py  openai.py
tests/agent_core/: test_agent.py  test_agent_loop.py  test_event_stream.py
tests/pi_ai/: test_openai_completions_provider.py  test_openai_provider.py  test_registry.py  test_runtime.py
