[project]
name = "pi-py"
version = "0.1.0"
description = "Python tools for building AI agents and managing LLM deployments"
readme = "README.md"
authors = [
    { name = "Aniket Maurya", email = "theaniketmaurya@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
exclude = ['^\.venv/']
